--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,9 @@ python:
 env:
 - DJANGO="Django>=1.11,<1.12"
 install:
-- pip install -q $DJANGO coveralls
+- pip install -q $DJANGO django-appconf coveralls
 script:
 - coverage run -a --source=axes runtests.py
-- coverage run -a --source=axes runtests_proxy.py
-- coverage run -a --source=axes runtests_num_proxies.py
-- coverage run -a --source=axes runtests_proxy_custom_header.py
 - coverage report
 after_success:
 - coveralls
